--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "jquery": "^3.1.0",
     "lodash": "^4.15.0",
     "vue": "^1.0.26",
-    "vuex": "^0.8.2"
+    "vuex": "^1.0.0-rc.2"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
